crates/musli/tests/ui/custom_decoder_error.stderr
error: cannot find derive macro `Encode` in this scope
 --> tests/ui/custom_decoder_error.rs:1:10
  |
1 | #[derive(Encode, Decode)]
  |          ^^^^^^
  |
  = note: consider importing one of these items:
          musli::Encode
          musli_macros::Encode

error: cannot find derive macro `Decode` in this scope
 --> tests/ui/custom_decoder_error.rs:1:18
  |
1 | #[derive(Encode, Decode)]
  |                  ^^^^^^
  |
  = note: consider importing one of these items:
          musli::Decode
          musli_macros::Decode

error: cannot find attribute `musli` in this scope
 --> tests/ui/custom_decoder_error.rs:3:7
  |
3 |     #[musli(with = "bytes")]
  |       ^^^^^
  |
  = note: `musli` is in scope, but it is a crate, not an attribute
